# openengram

./: .dockerignore  .env.example  .factory-debugger-prompt.md  .factory-prompt.md  .gitignore  .npmignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  BACKUP.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEBUG_LINKING.md  Dockerfile  LICENSE  MEMORY_INSTRUCTIONS.md  MONETIZATION.md  README.md  ROADMAP.md  api-spec.json  docker-compose.yml  docker-entrypoint.sh  fast-sync.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  sync-api-to-local.js  test-recall.sh  tsconfig.build.json  tsconfig.json  turbo.json
.acr/: capability.yaml  deep.md  standard.md
.github/: PULL_REQUEST_TEMPLATE.md
.openclaw/: workspace-state.json
backups/: engram_backup_2026-02-05_112538.sql
benchmarks/: README.md
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  AUTH-ARCHITECTURE.md  CLOUD-VS-SELFHOSTED.md  CONFIGURATION.md  CUSTOM-GPT-SETUP.md  DASHBOARD_UI.md  EMBEDDING-ARCHITECTURE.md  FEEDBACK-API.md  LESSON_MEMORY_DESIGN.md  LINEAR-GITHUB-INTEGRATION.md  MEMORY_INTELLIGENCE_DESIGN.md  MEMORY_INTELLIGENCE_FINAL.md  MIGRATIONS.md  OPENCLAW_HOOK_INTEGRATION.md  PROVIDERS.md  QUALITY.md  QUICKSTART.md  RELEASE_NOTES_v1.5.0_DRAFT.md  ROLLBACK.md  SDK.md  SELF_HOSTING.md  TEMPORAL_MEMORY_DESIGN.md  TESTING.md  VERIFICATION-STATUS.md  agent-reflection.md  contextual-recall-api.md  getting-started.md  openclaw-hook-spec.md
e2e/: api-mocks.ts  pages.spec.ts  route-inventory.ts  (+1 more)
(+2172 files in other folders)
